--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -31,3 +31,19 @@ jobs:
       run: mvn -B package --file pom.xml
     - name: Test with Maven
       run: mvn test
+
+  publish-job:
+      runs-on: ubuntu-latest
+      needs: [build]
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-java@v1
+          with:
+            java-version: 14
+        - run: mvn -B package --file pom.xml -DskipTests
+        - run: mkdir testing && cp target/*jar-with-dependencies.jar testing
+        - uses: actions/upload-artifact@v1
+          with:
+            name: Package
+            path: testing
+      
