--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,7 +41,7 @@ jobs:
           with:
             java-version: 14
         - run: mvn -B package --file pom.xml -DskipTests
-        - run: mkdir testing && cp target/*jar-with-dependencies.jar testing
+        - run: mkdir testing && cp target/*.jar testing
         - uses: actions/upload-artifact@v1
           with:
             name: Package
