--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,22 +28,25 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Test with Maven
-      run: mvn test
+      run: mvn -B package --file pom.xml -DskipTests
 
-  publish-job:
-      runs-on: ubuntu-latest
-      needs: [build]
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-java@v1
-          with:
-            java-version: 14
-        - run: mvn -B package --file pom.xml -DskipTests
-        - run: mkdir testing && cp target/*.jar testing
-        - uses: actions/upload-artifact@v1
-          with:
-            name: Package
-            path: testing
+    - name: Copy Artifacts
+      run: mkdir testing && cp target/*.jar testing
+
+    - name: Upload Artifacts
+      uses: actions/upload-artifact@v1
+      with:
+        name: Package
+        path: testing
+
+    - name: Deploy to Server
+      uses: appleboy/scp-action@v2
+      with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        password: ${{ secrets.PASSWORD }}
+        source: "${{ github.workspace }}/testing/*.jar"
+        target: "/home/nouman/test"
+    
+
       
