--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -33,20 +33,31 @@ jobs:
     - name: Copy Artifacts
       run: mkdir testing && cp target/*.jar testing
 
+  
     - name: Upload Artifacts
       uses: actions/upload-artifact@v1
       with:
         name: Package
         path: testing
 
-    - name: Deploy to Server
-      uses: appleboy/scp-action@v0.1.4
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        password: ${{ secrets.PASSWORD }}
-        source: "${{ github.workspace }}/testing/*.jar"
-        target: "/home/nouman/test"
+  deploy:
+        needs: build
+          
+        runs-on: ubuntu-latest
     
+        steps:
+          - name: Download artifact from build job
+            uses: actions/download-artifact@v3
+            with:
+              name: Package
+          - name: Deploy to Server
+            uses: appleboy/scp-action@v0.1.4
+            with:
+              host: ${{ secrets.HOST }}
+              username: ${{ secrets.USERNAME }}
+              password: ${{ secrets.PASSWORD }}
+              source: "${{ github.workspace }}/testing/*.jar"
+              target: "/home/nouman/test"
+      
 
       
