--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -58,6 +58,7 @@ jobs:
               password: ${{ secrets.PASSWORD }}
               source: "*"
               target: "/home/nouman/test"
+              rm: true
       
 
       
